2003-10-29  Mike Stump  <mrs@apple.com>

	* c-common.c (builtins_c_fragment): Mark for PCH.
	(output_c_fragment): Likewise.
	(current_fragment_deps_end): Likewise.
	(include_fragments): Add.
	(restore_fragment): Add code to output remembered asm code
	associated with the fragment.
	(cb_enter_fragment): Use FRAGMENT_CHAIN instead of TREE_CHAIN.
	Add code to remember the start of the asm code output.
	(xfseek): Add.
	(cb_exit_fragment): Add code to save off the asm code that was
	output during fragment processing.
	* c-common.h (FRAGMENT_CHAIN): Add.
	(FRAGMENT_GLOBAL_CHAIN): Add.
	(alloc_include_fragment): 
	* ggc-common.c (gt_pch_note_object): Allow the static types of
	GTY(()) variables to not match, so that we can have
	subclass/superclasses.
	* tree.h (SET_DECL_FRAGMENT): No cast needed anymore, the types are
	now correct.
	* tree.h (tree_decl): Make defining_fragment be a c_include_fragment.
	(c_include_fragment): Add asm_buf and asm_file_startpos.

2003-10-29  Per Bothner  <pbothner@apple.com>

	* function.c (init_function_once):  Reset funcdef_no.
	* varasm.c (init_varasm_once):  Reset const_labelno.

2003-10-29  Per Bothner  <pbothner@apple.com>

	* c-patch.in (maybe_identifier):  New non-terminal.
	(structsp_attr):  Use maybe_identifier to combine_case.  Not only
	is this simpler, but it calls finish_struct before parsing body,
	which is needed for compiler-server to adjust currently_nested.

2003-10-29  Per Bothner  <pbothner@apple.com>

	* cpphash.h (struct cpp_fragment):  Fields start_line and end_line
	are fileline instances.

2003-10-18  Per Bothner  <per@bothner.com>

	* c-lex.c (src_line):   Remove unneeded static variable.
	(cb_line_change):  Set input_line directly, instead of src_line.
	(get_non_padding_token):  We no longer need to compensate for the
	"horrible things" the C++ front-end does with the current line number,

	* cppinit.c (cpp_read_main_file):  Split into two functions:
	Distribute _cpp_stack_file call over the two functions.